--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -3,9 +3,9 @@ name: install dependencies
 # 触发时机，在 tag 被 push 操作触发
 on:
   push:
-    branches: ["master", "develop"]
+    branches: ["main", "develop"]
   pull_request:
-    branches: ["master"]
+    branches: ["main"]
 
 # 任务，定义个changelog 的任务
 jobs:
