--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ezuikit/player-hls",
-  "version": "0.1.0-beta.2",
+  "version": "0.1.0",
   "description": "hls播放器",
   "main": "dist/index.js",
   "umd": "dist/index.umd.js",
