--- a/examples/vue-app/package.json
+++ b/examples/vue-app/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@ezuikit/player-hls": "^0.1.0-beta.2",
+    "@ezuikit/player-hls": "^0.1.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
